# student-marks-service-assignment

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/echo/: schema.py  views.py
app/tests/: test_echo.py
sample_data/: student_marks.json  student_marks.py
